tests/suite/fail/regression/fuzz/fuzz_garbage_5.ny
fn main() { let x = @5 } //~ ERROR
